--- a/less/dataobject.less
+++ b/less/dataobject.less
@@ -8,13 +8,42 @@
 
 .dataobject-page {
 
-    .right-tabs {
+    .full-width {
+        width: 100vw;
+        position: relative;
+        left: 50%;
+        right: 50%;
+        margin-left: -50vw;
+        margin-right: -50vw;
+    }
+
+    .dataobject-tabs {
         .nav {
             float: right;
             border-bottom: 0px;
 
+            width: 100%;
+            white-space: nowrap;
+            overflow-x: auto;
+            overflow-y: hidden;
+
+            text-align: right;
+
             li {
-                float: left;
+                /*float: left;*/
+                float: none;
+
+                position: relative;
+                display: inline-block;
+                white-space: initial;
+
+                &:first-child {
+                    margin-left: 10px; 
+                }
+
+                &:last-child {
+                    margin-right: 10px; 
+                }
             }
         }
 
@@ -608,7 +637,7 @@
                         padding: 0;
                     }
                 }
-                
+
                 .title {
                     font-size: 12px;
                     line-height: 18px;
